# rNetCore

./: .clang-format  .gitignore  CMakeLists.txt  package-install.ps1  package-install.sh  tests-run-on-all-platforms.ps1  tests-unix-gcc-build.sh  tests-unix-gcc-run.sh  tests-win-mingw-build.ps1  tests-win-msbuild-build.ps1  tests-win-msbuild-run.ps1
package/: DESCRIPTION  NAMESPACE
package/R/: Init.R
package/src/: Makevars  Makevars.win  exports.cpp
package/src/clrhost/: CMakeLists.txt  Makefile  abstraction.h  appdomainwrapper.cpp  clrhosting.cpp  clrhosting.h  clrhostwrapper.cpp  comptr.h
package/src/clrhost/dotnet/: appdomain_dotnet.cpp  appdomain_dotnet.h  tpalist_builder.h
package/src/clrhost/dotnet/unix/: clrhost_dotnet_unix.cpp  clrhost_dotnet_unix.h
package/src/clrhost/dotnet/win/: clrhost_dotnet_win.cpp  clrhost_dotnet_win.h
package/src/clrhost/include/: hresult.h  mscoree.h  unknwn.h  wintypes.h
package/src/json/: CMakeLists.txt  Makefile  decoder.cpp  jarray.cpp  jarray.h  jobject.cpp  jobject.h  json.h  jstring.cpp  jstring.h  jtoken.cpp  jvalue.cpp  jvalue.h  parser.cpp
package/src/pal/: CMakeLists.txt  Makefile  linking.h  linking.unix.cpp  linking.win.cpp  path.cpp  path.h  path.unix.cpp  path.win.cpp
package/src/semver/: CMakeLists.txt  Makefile  (+2 more)
test/: CMakeLists.txt
test/clrhost/: CMakeLists.txt  clrhosttest.h  main.cpp
test/clrhost/TestAssembly/: TestClass.cs
test/semver/: CMakeLists.txt  main.cpp  semanticversiontest.h
test/stringtranscoding/: CMakeLists.txt  Utf16ToUtf32IteratorTest.h  Utf16ToUtf8IteratorTest.h  Utf32ToUtf16IteratorTest.h  Utf32ToUtf8IteratorTest.h  Utf8ToUtf16IteratorTest.h  Utf8ToUtf32IteratorTest.h  main.cpp
(+13 files in other folders)
